[package]
name = "dolphin-rs"
version = "2.2.0"
authors = ["Evan Maddock <maddock.evan@vivaldi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
confy = "0.4.0"
err-derive = "0.3"
lazy_static = "1.4.0"
linemux = {git = "https://github.com/jmagnuson/linemux"}
rcon = "0.4"
regex = "1.4.2"
serde_json = "1.0"
tracing = "0.1.21"
tracing-subscriber = "0.2.15"
warp = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serenity]
version = "0.10"

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "sync", "time"]

[profile.dev]
# Let's speed up compilation and maybe reduce dev binary size a bunch.
debug = 0

