[package]
name = "dolphin-rs"
version = "2.7.0"
authors = ["Evan Maddock <maddock.evan@vivaldi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
confy = "0.4.0"
lazy_static = "1.4.0"
linemux = "0.2.3"
pipeline = "0.5.0"
reqwest = "0.11.9"
fancy-regex = "0.7.1"
serde_json = "1.0.74"
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
warp = "0.3.2"

[dependencies.rcon]
version = "0.6.0"
features = ["rt-tokio"]

[dependencies.serde]
version = "1.0.133"
features = ["derive"]

[dependencies.serenity]
version = "0.11.0"
default-features = false
features = ["client", "gateway", "cache", "rustls_backend", "model", "unstable_discord_api"]

[dependencies.tokio]
version = "1.15.0"
features = ["rt-multi-thread", "sync", "time"]

[profile.dev]
# Let's speed up compilation and maybe reduce dev binary size a bunch.
debug = 0
