[package]
name = "dolphin-rs"
version = "2.8.0"
authors = ["Evan Maddock <maddock.evan@vivaldi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
confy = "0.5.0"
lazy_static = "1.4.0"
linemux = "0.3.0"
pipeline = "0.5.0"
reqwest = { version = "0.11.0", features = ["json"] }
fancy-regex = "0.13.0"
rcon = { version = "0.6.0", features = ["rt-tokio"] }
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.74"
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "cache", "rustls_backend", "model", "unstable_discord_api"] }
thiserror = "1"
tokio = { version = "1.35.0", features = ["rt-multi-thread", "sync", "time"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.6"
warp = "0.3.2"

[profile.dev]
# Let's speed up compilation and maybe reduce dev binary size a bunch.
debug = 0
